Bug 102343 - Unable to undo text formatting in master slide placeholder textboxs
Summary: Unable to undo text formatting in master slide placeholder textboxs
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3 target:5.1.6
Keywords: bibisected, regression
Depends on:
Blocks: Master-Slide-View
  Show dependency treegraph
 
Reported: 2016-09-22 00:16 UTC by Yousuf Philips (jay) (retired)
Modified: 2020-05-15 11:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-09-22 00:16:30 UTC
Steps:
1) Open Impress
2) Switch to master slide mode
3) Click on 'Click to edit the outline text format' line of content textbox
4) Set text to bold
5) Deselect textbox
6) Press undo until you cant undo anymore

Regression as this worked fine in 4.1.

Version: 5.3.0.0.alpha0+
Build ID: 3287bc2f91438085b7604773d5e0346fc3c3f452
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-09-18_06:17:20
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Aron Budea 2016-09-23 05:13:03 UTC
Reproduced with as early as 4.2.0.4 / Windows 7.
Comment 2 Caolán McNamara 2016-09-28 13:55:16 UTC
The problem begins with

commit 12a4200e8ff7f045efcc7e9d15a24b15b248c437
Author: Armin Le Grand <alg@apache.org>
Date:   Thu Aug 9 08:42:27 2012 +0000

    Related: #i120498# Enhanced Undo/Redo and user experience...
    when editing texts in graphic objects and/or tables

and the issue is that the formatting changes in these master textboxes create changes in the stylesheet, rather than just changes in the textbox itself and the changes above don't take that into account I think
Comment 3 Commit Notification 2016-09-28 15:49:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=057d8abebb19fedd769a43120621488ba305cf93

Resolves: tdf#102343 unable to undo stylesheet changes in master...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2016-09-28 19:33:17 UTC
above commit is more of a workaround than a shining implementation of integration of better edit undo and the master placeholder object proxies for stylesheet modification
Comment 5 Yousuf Philips (jay) (retired) 2016-10-05 06:10:39 UTC
Thanks Caolan

Version: 5.3.0.0.alpha0+
Build ID: f309531cfe1d6a1b6ea1306d45ed3e121145bc5f
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-04_03:52:18
Locale: en-US (en_US.UTF-8); Calc: group
Comment 6 Commit Notification 2016-10-06 14:45:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e049ad52cce66cf4fe3bf96b9a1ac4c3688d887&h=libreoffice-5-2

Resolves: tdf#102343 unable to undo stylesheet changes in master...

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-10-18 07:47:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef92273cae159d1c8d5621cebf79d4f90c993f43&h=libreoffice-5-1-6

Resolves: tdf#102343 unable to undo stylesheet changes in master...

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 hppyromz 2020-05-15 11:07:06 UTC Comment hidden (spam)