Resolves: tdf#102343 unable to undo stylesheet changes in master...

slides done via proxy textbox objects

regression since...

commit 12a4200e8ff7f045efcc7e9d15a24b15b248c437
Author: Armin Le Grand <alg@apache.org>
Date:   Thu Aug 9 08:42:27 2012 +0000

    Related: #i120498# Enhanced Undo/Redo and user experience...
    when editing texts in graphic objects and/or tables

The issue is that the formatting changes in these master textboxes create
changes in the stylesheet, rather than just changes in the textbox itself and
the changes above don't take that into account and throw away these unusual
undo objects.

Change-Id: I209758cefa96b2f886161de1d44d6a68d007faa7